[gd_scene load_steps=20 format=3 uid="uid://bhf86ox21s53f"]

[ext_resource type="Script" path="res://tScenes/sew_machine.gd" id="1_tn0mc"]
[ext_resource type="Script" path="res://tScenes/rope.gd" id="2_v16e3"]

[sub_resource type="Animation" id="Animation_k86nu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_veay5"]
resource_name = "atk1"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 0.120742, 4.43828),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.698132, 0.174533, -0.349066), Vector3(-1.01927, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 0.120742, 4.43828),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.698132, 0.174533, -0.349066), Vector3(-1.01927, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s32wn"]
resource_name = "atk2"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 0.517632, 8.57418),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.226893, 0.45204, -1.58476), Vector3(-0.792379, 0.45204, 1.58476)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 0.517632, 8.57418),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.792379, 0.45204, -1.58476), Vector3(-0.792379, 0.45204, 1.58476)]
}

[sub_resource type="Animation" id="Animation_acucc"]
resource_name = "atk3"
step = 0.05

[sub_resource type="Animation" id="Animation_gnxq2"]
resource_name = "prepare"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.435275, 9.51366),
"update": 0,
"values": [Vector3(-0.991347, 0.249582, -0.492183), Vector3(-1.5708, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35, 0.6),
"transitions": PackedFloat32Array(0.0947324, 5.46416),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.1)]
}

[sub_resource type="Animation" id="Animation_twuuk"]
resource_name = "wall"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.108819, 3.03143),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.0472, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uel81"]
_data = {
"RESET": SubResource("Animation_k86nu"),
"atk1": SubResource("Animation_veay5"),
"atk2": SubResource("Animation_s32wn"),
"atk3": SubResource("Animation_acucc"),
"prepare": SubResource("Animation_gnxq2"),
"wall": SubResource("Animation_twuuk")
}

[sub_resource type="CylinderMesh" id="CylinderMesh_1v2sb"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.3
radial_segments = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y84ug"]
albedo_color = Color(0.699653, 0.699653, 0.699653, 1)
metallic = 0.8

[sub_resource type="CylinderMesh" id="CylinderMesh_i1kqg"]
top_radius = 0.01
bottom_radius = 0.05
height = 1.0
radial_segments = 8

[sub_resource type="CylinderMesh" id="CylinderMesh_l1hwv"]
top_radius = 0.05
bottom_radius = 0.06
height = 0.04
radial_segments = 8

[sub_resource type="TorusMesh" id="TorusMesh_33jmg"]
inner_radius = 0.1
outer_radius = 0.2
rings = 8
ring_segments = 8

[sub_resource type="BoxShape3D" id="BoxShape3D_2elo7"]
size = Vector3(0.15, 1.05, 0.15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pn2cx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ryva5"]
material = SubResource("StandardMaterial3D_pn2cx")
top_radius = 0.05
bottom_radius = 0.05
height = 0.1
radial_segments = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wlxr4"]

[sub_resource type="BoxMesh" id="BoxMesh_o4e8f"]
material = SubResource("StandardMaterial3D_wlxr4")
size = Vector3(0.1, 0.2, 0.1)

[node name="SewMachine" type="RigidBody3D"]
collision_layer = 2
collision_mask = 12
mass = 0.5
lock_rotation = true
freeze = true
script = ExtResource("1_tn0mc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uel81")
}

[node name="weapon" type="Node3D" parent="."]

[node name="CSGMesh3D" type="CSGMesh3D" parent="weapon"]
layers = 2
mesh = SubResource("CylinderMesh_1v2sb")
material = SubResource("StandardMaterial3D_y84ug")

[node name="CSGMesh3D2" type="CSGMesh3D" parent="weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
layers = 2
use_collision = true
collision_layer = 128
collision_mask = 3
mesh = SubResource("CylinderMesh_i1kqg")
material = SubResource("StandardMaterial3D_y84ug")

[node name="CSGMesh3D3" type="CSGMesh3D" parent="weapon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.17, 0)
layers = 2
mesh = SubResource("CylinderMesh_l1hwv")
material = SubResource("StandardMaterial3D_y84ug")

[node name="CSGMesh3D4" type="CSGMesh3D" parent="weapon"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, 0, -0.319336, 0)
mesh = SubResource("TorusMesh_33jmg")
material = SubResource("StandardMaterial3D_y84ug")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66, 0)
shape = SubResource("BoxShape3D_2elo7")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[node name="StaticBody3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66, 0)
shape = SubResource("BoxShape3D_2elo7")

[node name="joint" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.509151, 0)
node_a = NodePath("..")

[node name="silks" type="Node3D" parent="."]

[node name="joints" type="Node3D" parent="."]

[node name="spawn_pos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.649246, 0)

[node name="silkNew" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 1, 0, -0.52, 0)

[node name="SoftBody3D" type="SoftBody3D" parent="silkNew"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.047, 0)
mesh = SubResource("CylinderMesh_ryva5")
collision_layer = 128
collision_mask = 128
total_mass = 0.01
pinned_points = [54]
attachments/0/point_index = 54
attachments/0/spatial_attachment_path = NodePath("../..")
attachments/0/offset = Vector3(0, -0.511, 0)
script = ExtResource("2_v16e3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.419773, 0)
mesh = SubResource("BoxMesh_o4e8f")
skeleton = NodePath("../silkNew")

[connection signal="timeout" from="Timer" to="." method="pull_out"]
[connection signal="timeout" from="Timer2" to="." method="silk_spawn"]
[connection signal="timeout" from="Timer3" to="." method="atk_back"]
[connection signal="body_entered" from="StaticBody3D" to="." method="wall_up"]
[connection signal="body_exited" from="StaticBody3D" to="." method="wall_down"]
